--- a/config/config.json
+++ b/config/config.json
@@ -1,17 +1,17 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "surya123456",
     "database": "FinalProject",
     "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
+    "username": "postgres",
+    "password": "postgres",
+    "database": "FinalProject_Test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
