--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "dotenv": "^10.0.0",
     "jest": "^27.3.1",
     "nodemon": "^2.0.14",
     "sequelize-cli": "^6.3.0",
