--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": "postgres",
+    "password": "surya123456",
     "database": "FinalProject",
     "host": "localhost",
     "dialect": "postgres"
