--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "surya123456",
+    "password": "postgres",
     "database": "FinalProject",
     "host": "localhost",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "surya123456",
+    "password": "postgres",
     "database": "FinalProject_Test",
     "host": "localhost",
     "dialect": "postgres"
