--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
-    "sequelize": "^6.9.0",
-    "dotenv": "^10.0.0"
+    "sequelize": "^6.9.0"
   },
   "devDependencies": {
     "jest": "^27.3.1",
