--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
+    "google-auth-library": "^7.10.2",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.0",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
     "sequelize": "^6.9.0"
   },
