--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.0",
     "multer": "^1.4.3",
+    "nodemailer": "^6.7.0",
     "pg": "^8.7.1",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "superagent": "^6.1.0"
   },
   "devDependencies": {
     "jest": "^27.3.1",
