--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development npx nodemon app.js",
     "start": "npx nodemon bin/www",
-    "test": "npx jest --watchAll --detectOpenHandles --runInBand --verbose --forceExit --coverage",
+    "test": "npx jest --watchAll --detectOpenHandles --runInBand --verbose --forceExit",
     "init-db:dev": "npx sequelize db:drop && npx sequelize db:create && npx sequelize db:migrate && npx sequelize db:seed:all",
     "init-db:test": "npx sequelize --env=test db:drop && npx sequelize --env=test db:create && npx sequelize --env=test db:migrate"
   },
